# DVD2CHD

./: .gitignore  BUNDLED_TOOLS.md  Cargo.toml  LICENSE  README.md  dev.ps1  plan.md  setup-env-permanent.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
dvd2chd-core/: Cargo.toml
dvd2chd-core/src/: core_wiring.rs  hash.rs  lib.rs  process_guard.rs  tools.rs  util.rs  verify.rs  windows_rip.rs
dvd2chd-core/src/linux/: cd.rs  chd.rs  dvd.rs  mod.rs
dvd2chd-gui/: Cargo.toml  build.rs  tools_manifest.example.json
dvd2chd-gui/locales/: de.toml  en.toml
dvd2chd-gui/packaging/: PKGBUILD.template  dvd2chd-gui.desktop
dvd2chd-gui/src/: drive.rs  main.rs  pkg_install.rs  tool_fetch.rs
dvd2chd-gui/src/app/: animation.rs  draw_dialogs.rs  draw_layout.rs  draw_toolbar.rs  job.rs  log.rs  mod.rs  presets.rs  source.rs  state.rs  taskbar.rs  timeline.rs  tools_check.rs  workflow.rs
tools/linux/: cdrdao  chdman  ddrescue
