[package]
name = "dvd2chd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
digest = "0.10"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
shell-words = "1.1"
parking_lot = "0.12"
which = "6"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
