[package]
name = "dvd2chd-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
confy = "0.6"
rfd = "0.15"
eframe = "0.28"
egui = "0.28"
dvd2chd-core = { path = "../dvd2chd-core" }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tempfile = "3"
dirs = "5"
dark-light = "2"
image = { version = "0.24", default-features = false, features = ["png"] }
sha2 = "0.10"
rust-i18n = "3"
