[package]
name = "dvd2chd-gui"
version = "0.1.0"
edition = "2021"
description = "Dump and convert optical media (DVD/CD) to CHD archives"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
confy = "0.6"
rfd = "0.15"
eframe = "0.28"
egui = "0.28"
dvd2chd-core = { path = "../dvd2chd-core" }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tempfile = "3"
dirs = "5"
dark-light = "2"
image = { version = "0.24", default-features = false, features = ["png"] }
sha2 = "0.10"
rust-i18n = "3"

# ── cargo-deb ──────────────────────────────────────────────────────────────────
[package.metadata.deb]
name = "dvd2chd"
maintainer = "DVD2CHD Contributors"
copyright = "DVD2CHD Contributors"
depends = "$auto, libgtk-3-0"
recommends = "mame-tools | chdman, cdrdao, gddrescue"
section = "utils"
priority = "optional"
extended-description = """\
DVD2CHD converts optical media (DVD and CD) directly to \
MAME CHD archives using chdman, cdrdao, and ddrescue."""
assets = [
  ["target/release/dvd2chd-gui",          "usr/bin/dvd2chd-gui",                          "0755"],
  ["target/release/tools/chdman",          "usr/lib/dvd2chd/tools/chdman",                 "0755"],
  ["target/release/tools/cdrdao",          "usr/lib/dvd2chd/tools/cdrdao",                 "0755"],
  ["target/release/tools/ddrescue",        "usr/lib/dvd2chd/tools/ddrescue",               "0755"],
  ["packaging/dvd2chd-gui.desktop",        "usr/share/applications/dvd2chd-gui.desktop",   "0644"],
  ["assets/icon.png",                      "usr/share/icons/hicolor/256x256/apps/dvd2chd.png", "0644"],
  ["../BUNDLED_TOOLS.md",                  "usr/share/doc/dvd2chd/BUNDLED_TOOLS.md",       "0644"],
  ["../LICENSE",                           "usr/share/doc/dvd2chd/copyright",              "0644"],
]

# ── cargo-generate-rpm ─────────────────────────────────────────────────────────
[package.metadata.generate-rpm]
name = "dvd2chd"
summary = "Dump and convert optical media (DVD/CD) to CHD archives"
license = "MIT"
requires = { gtk3 = "*" }

[[package.metadata.generate-rpm.assets]]
source = "target/release/dvd2chd-gui"
dest = "/usr/bin/dvd2chd-gui"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "target/release/tools/chdman"
dest = "/usr/lib/dvd2chd/tools/chdman"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "target/release/tools/cdrdao"
dest = "/usr/lib/dvd2chd/tools/cdrdao"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "target/release/tools/ddrescue"
dest = "/usr/lib/dvd2chd/tools/ddrescue"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "packaging/dvd2chd-gui.desktop"
dest = "/usr/share/applications/dvd2chd-gui.desktop"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "assets/icon.png"
dest = "/usr/share/icons/hicolor/256x256/apps/dvd2chd.png"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "../BUNDLED_TOOLS.md"
dest = "/usr/share/doc/dvd2chd/BUNDLED_TOOLS.md"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "../LICENSE"
dest = "/usr/share/licenses/dvd2chd/LICENSE"
mode = "0644"
